--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1>Dabih Development</h1>
     <p> Contact us at dabihdevelopment@gmail.com for support. </p>
+    <a href="privacypolicy.html" title="Privacy Policy">Privacy Policy</a>
+  </body>
+  
     
       
 
