--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Dabih Development</h1>
     <p> Contact us at dabihdevelopment@gmail.com for support. </p>
-    <a href="privacypolicy.html" title="Privacy Policy">Privacy Policy</a>
+    <a href="https://<dabihdevelopment>.github.io/<dabihdevelopment.github.io>/privacypolicy.html" title="Privacy Policy">Privacy Policy</a>
   </body>
   
     
