--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   
   <body>
-    <h1>Dabih Development</h1>
+    <h1>Dabih Development!</h1>
     <p> Contact us at dabihdevelopment@gmail.com for support. </p>
-    <a href="https://dabihdevelopment.github.io/dabihdevelopment.github.io/privacypolicy.html" title="Privacy Policy">Privacy Policy</a>
+    <a href="/dabihdevelopment.github.io/privacypolicy.html" title="Privacy Policy">Privacy Policy</a>
   </body>
   
     
