--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-    <h1>Dabih Development</h1>
+    <h1>Dabih Development!</h1>
     <p> Contact us at dabihdevelopment@gmail.com for support. </p>
     <a href="privacypolicy.html" title="Privacy Policy">Privacy Policy</a>
   </body>
