--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Dabih Development</h1>
     <p> Contact us at dabihdevelopment@gmail.com for support. </p>
+    <p> To delete your account email dabihdevelopment@gmail.com with your email address associated with your account. </p>
     <a href="privacypolicy.html" title="Privacy Policy">Privacy Policy</a>
   </body>
   
